--- a/src/app/spotify/track-details/track-details.component.html
+++ b/src/app/spotify/track-details/track-details.component.html
@@ -3,7 +3,10 @@
 }
 
 <div>
-    <p-table [value]="trackDetails">
+    <p-table [value]="trackDetails" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
+        [totalRecords]="trackDetails.length" [paginator]="true" paginatorPosition="top"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [tableStyle]="{'min-width': '60rem'}" >
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <h3>Audio Details</h3>
