--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -6,8 +6,8 @@
 <div class="palylist_table">
     <p-table [value]="audioTracks" [rows]="pageSize" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
         (onPage)="onPageChange($event)" [totalRecords]="audioTracks.length" [paginator]="true" paginatorPosition="top"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" sortField="name"
-        (sortOrder)="1" [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" sortField="name" (sortOrder)="1"
+        [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
         (onRowSelect)="rowSelectionEvent()" (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
         <!-- [lazy]="true" (onLazyLoad)="loadData($event)" [multiSortMeta]="multiSortMeta"> -->
         <ng-template pTemplate="caption">
@@ -15,6 +15,9 @@
                 <div></div>
                 <h3>Audio Library</h3>
                 <div class="flex flex-row align-items-center">
+                    <!-- <div>
+                        <p-button [rounded]="true" severity="success" icon="pi pi-spin"></p-button>
+                    </div> -->
                     <div class="flex flex-row align-items-center">
                         <p-buttonGroup class="pr-3 btn-grp-custom">
                             <p-button [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged()"
@@ -51,9 +54,14 @@
             <div>
                 <p-chart type="line" [data]="data2" [options]="options" *ngIf="showSummaryGraph" />
             </div>
-            <div><p-chart type="line" [data]="data" [options]="options" *ngIf="showDetailedGraph" />
-
+            <div>
+                <p-chart type="line" [data]="data" [options]="options" *ngIf="showDetailedGraph" />
             </div>
+            <!-- <div>
+                <p-paginator (onPageChange)="onPageChange($event)" [first]="first" [rows]="pageSize" [rowsPerPageOptions]="[10, 25, 50]" [totalRecords]="120"
+                    [showCurrentPageReport]="true" [showPageLinks]="true" [showJumpToPageDropdown]="false"
+                    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} tracks" />
+            </div> -->
         </ng-template>
 
         <ng-template pTemplate="header">
@@ -83,23 +91,26 @@
                 <th pSortableColumn="audio_features.tempo">
                     Tempo
                     <p-sortIcon field="audio_features.tempo" />
-                    <p-columnFilter type="numeric" field="audio_features.tempo" display="menu" [showOperator]="false"  >
+                    <p-columnFilter type="numeric" field="audio_features.tempo" display="menu" [showOperator]="false">
                     </p-columnFilter>
                 </th>
                 <th pSortableColumn="audio_features.danceability">
                     Danceability
                     <p-sortIcon field="audio_features.danceability" />
-                    <p-columnFilter type="numeric" field="audio_features.danceability" display="menu" [showOperator]="false"/>
+                    <p-columnFilter type="numeric" field="audio_features.danceability" display="menu"
+                        [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.energy">
                     Energy
                     <p-sortIcon field="audio_features.energy" />
-                    <p-columnFilter type="numeric" field="audio_features.energy" display="menu" [showOperator]="false"/>
+                    <p-columnFilter type="numeric" field="audio_features.energy" display="menu"
+                        [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.loudness">
                     Loudness
                     <p-sortIcon field="audio_features.loudness" />
-                    <p-columnFilter type="numeric" field="audio_features.loudness" display="menu" [showOperator]="false"/>
+                    <p-columnFilter type="numeric" field="audio_features.loudness" display="menu"
+                        [showOperator]="false" />
                 </th>
             </tr>
         </ng-template>
