--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -8,21 +8,26 @@
         (onPage)="onPageChange($event)" [totalRecords]="hisotryTracks.length" [paginator]="true" paginatorPosition="top"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" sortField="added_at"
         (sortOrder)="1" [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
-        (onRowSelect)="rowSelectionEvent()" (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
+         (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <div></div>
                 <h3>Recently Played</h3>
                 <div class="flex flex-row align-items-center">
                     <div class="flex flex-row align-items-center">
+                        <div>
+                            <p-button [rounded]="true" severity="success" icon="pi pi-refresh" 
+                            [disabled]="!showSummaryGraph && !showDetailedGraph" (onClick)="refreshGraphs()"
+                            pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2" ></p-button>
+                        </div>
                         <p-buttonGroup class="pr-3 btn-grp-custom">
-                            <p-button [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged()"
+                            <p-button [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged(false)"
                                 pTooltip="Summary Graph" tooltipPosition="bottom">
                                 <span class="material-symbols-outlined">
                                     show_chart
                                 </span>
                             </p-button>
-                            <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged()"
+                            <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged(false)"
                                 pTooltip="Detailed Graph" tooltipPosition="bottom">
                                 <span class="material-symbols-outlined">
                                     monitoring
@@ -57,7 +62,7 @@
                 <th style="width:80px">
                 </th>
                 <th style="width: 4rem">
-                    <p-tableHeaderCheckbox (click)="selectAllClicked()" />
+                    <p-tableHeaderCheckbox  />
                 </th>
                 <th style="width:80px">
                 </th>
