--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -8,25 +8,27 @@
         (onPage)="onPageChange($event)" [totalRecords]="audioTracks.length" [paginator]="true" paginatorPosition="top"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" sortField="name" (sortOrder)="1"
         [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
-        (onRowSelect)="rowSelectionEvent()" (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
-        <!-- [lazy]="true" (onLazyLoad)="loadData($event)" [multiSortMeta]="multiSortMeta"> -->
+        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
+        <!-- (onRowSelect)="rowSelectionEvent()"  [lazy]="true" (onLazyLoad)="loadData($event)" [multiSortMeta]="multiSortMeta"> -->
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <div></div>
                 <h3>Audio Library</h3>
                 <div class="flex flex-row align-items-center">
-                    <!-- <div>
-                        <p-button [rounded]="true" severity="success" icon="pi pi-spin"></p-button>
-                    </div> -->
+                    <div>
+                        <p-button [rounded]="true" severity="success" icon="pi pi-refresh" 
+                        [disabled]="!showSummaryGraph && !showDetailedGraph" (onClick)="refreshGraphs()"
+                        pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2" ></p-button>
+                    </div>
                     <div class="flex flex-row align-items-center">
                         <p-buttonGroup class="pr-3 btn-grp-custom">
-                            <p-button [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged()"
+                            <p-button [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged(false)"
                                 pTooltip="Summary Graph" tooltipPosition="bottom">
                                 <span class="material-symbols-outlined">
                                     show_chart
                                 </span>
                             </p-button>
-                            <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged()"
+                            <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged(false)"
                                 pTooltip="Detailed Graph" tooltipPosition="bottom">
                                 <span class="material-symbols-outlined">
                                     monitoring
@@ -69,24 +71,24 @@
                 <th style="width:80px">
                 </th>
                 <th style="width: 4rem">
-                    <p-tableHeaderCheckbox (click)="selectAllClicked()" />
+                    <p-tableHeaderCheckbox  />
                 </th>
                 <th style="width:80px">
                 </th>
                 <th pSortableColumn="name" style="width:250px">
                     Title
                     <p-sortIcon field="name" />
-                    <p-columnFilter type="text" field="name" display="menu" />
+                    <p-columnFilter type="text" field="name" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="artist" style="width:200px">
                     Artist
                     <p-sortIcon field="artist" />
-                    <p-columnFilter type="text" field="artist" display="menu" />
+                    <p-columnFilter type="text" field="artist" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="duration_ms">
                     Duration
                     <p-sortIcon field="duration_ms" />
-                    <p-columnFilter type="text" field="duration" display="menu" />
+                    <p-columnFilter type="text" field="duration" display="menu" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.tempo">
                     Tempo
