--- a/src/app/spotify/liked-songs/liked-songs.component.html
+++ b/src/app/spotify/liked-songs/liked-songs.component.html
@@ -6,24 +6,31 @@
 <div class="palylist_table">
     <p-table [value]="likedSongs" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
         [totalRecords]="likedSongs.length" [paginator]="true" sortField="added_at" (sortOrder)="1"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [(selection)]="selectedTracksList"
-        [tableStyle]="{'min-width': '60rem'}" (onRowSelect)="rowSelectionEvent()" (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [(selection)]="selectedTracksList" [tableStyle]="{'min-width': '60rem'}" (onRowReorder)="tableReordered($event)"
+        (onSort)="tableSorted($event)">
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <div></div>
                 <h3>Liked Songs</h3>
                 <div class="flex flex-row align-items-center">
                     <div class="flex flex-row align-items-center" *ngIf="likedSongs.length > 0">
+                        <div>
+                            <p-button [rounded]="true" severity="success" icon="pi pi-refresh "
+                                [disabled]="!showSummaryGraph && !showDetailedGraph" (onClick)="refreshGraphs()"
+                                pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2"></p-button>
+                        </div>
                         <div class="pr-3 ">
                             <p-buttonGroup class="btn-grp-custom">
-                                <p-button [outlined]="!showSummaryGraph" (onClick)="showSummaryGraphChanged()"
+                                <p-button [outlined]="!showSummaryGraph" (onClick)="showSummaryGraphChanged(false)"
                                     size="small" pTooltip="Summary Graph" tooltipPosition="bottom">
                                     <span class="material-symbols-outlined">
                                         show_chart
                                     </span>
                                 </p-button>
-                                <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged()"
-                                    pTooltip="Detailed Graph" tooltipPosition="bottom">
+                                <p-button [outlined]="!showDetailedGraph" size="small"
+                                    (onClick)="showGraphChanged(false)" pTooltip="Detailed Graph"
+                                    tooltipPosition="bottom">
                                     <span class="material-symbols-outlined">
                                         monitoring
                                     </span>
@@ -58,7 +65,7 @@
                 <th style="width:80px">
                 </th>
                 <th style="width: 4rem">
-                    <p-tableHeaderCheckbox (click)="rowSelectionEvent()" />
+                    <p-tableHeaderCheckbox />
                 </th>
                 <th style="width:80px">
                 </th>
