--- a/src/app/spotify/playlist-details/playlist-details.component.html
+++ b/src/app/spotify/playlist-details/playlist-details.component.html
@@ -14,15 +14,20 @@
                 <h3>{{currentPlayListName}}</h3>
                 <div class="flex flex-row align-items-center">
                     <div class="flex flex-row align-items-center" *ngIf="playlistTracks.length > 0">
+                        <div>
+                            <p-button [rounded]="true" severity="success" icon="pi pi-refresh" 
+                            [disabled]="!showSummaryGraph && !showDetailedGraph" (onClick)="refreshGraphs()"
+                            pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2" ></p-button>
+                        </div>
                         <div class="pr-3 ">
                             <p-buttonGroup class="btn-grp-custom">
-                                <p-button [outlined]="!showSummaryGraph" (onClick)="showSummaryGraphChanged()"
+                                <p-button [outlined]="!showSummaryGraph" (onClick)="showSummaryGraphChanged(false)"
                                     size="small" pTooltip="Summary Graph" tooltipPosition="bottom">
                                     <span class="material-symbols-outlined">
                                         show_chart
                                     </span>
                                 </p-button>
-                                <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged()"
+                                <p-button [outlined]="!showDetailedGraph" size="small" (onClick)="showGraphChanged(false)"
                                     pTooltip="Detailed Graph" tooltipPosition="bottom">
                                     <span class="material-symbols-outlined">
                                         monitoring
