--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -8,22 +8,25 @@
         (onPage)="onPageChange($event)" [totalRecords]="audioTracks.length" [paginator]="true" paginatorPosition="top"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" sortField="name" (sortOrder)="1"
         [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
-        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
-        <!-- (onRowSelect)="rowSelectionEvent()"  [lazy]="true" (onLazyLoad)="loadData($event)" [multiSortMeta]="multiSortMeta"> -->
+        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)" [lazy]="true"
+        (onLazyLoad)="loadData($event)" [multiSortMeta]="multiSortMeta">
+        <!-- (onFilter)="applyTableFilter($event)" -->
+
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <div></div>
                 <h3>Audio Library</h3>
                 <div class="flex flex-row align-items-center">
                     <div>
-                        <p-button [rounded]="true" severity="success" icon="pi pi-refresh" 
-                        [disabled]="!showSummaryGraph && !showDetailedGraph" (onClick)="refreshGraphs()"
-                        pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2" ></p-button>
+                        <p-button [rounded]="true" severity="success" icon="pi pi-refresh"
+                            [disabled]="!showSummaryGraph && !showDetailedGraph" (onClick)="refreshGraphs()"
+                            pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2"></p-button>
                     </div>
                     <div class="flex flex-row align-items-center">
                         <p-buttonGroup class="pr-3 btn-grp-custom">
-                            <p-button [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged(false)"
-                                pTooltip="Summary Graph" tooltipPosition="bottom">
+                            <p-button [outlined]="!showSummaryGraph" size="small"
+                                (onClick)="showSummaryGraphChanged(false)" pTooltip="Summary Graph"
+                                tooltipPosition="bottom">
                                 <span class="material-symbols-outlined">
                                     show_chart
                                 </span>
@@ -71,7 +74,7 @@
                 <th style="width:80px">
                 </th>
                 <th style="width: 4rem">
-                    <p-tableHeaderCheckbox  />
+                    <p-tableHeaderCheckbox />
                 </th>
                 <th style="width:80px">
                 </th>
@@ -100,7 +103,7 @@
                     Danceability
                     <p-sortIcon field="audio_features.danceability" />
                     <p-columnFilter type="numeric" field="audio_features.danceability" display="menu"
-                        [showOperator]="false" />
+                        [minFractionDigits]="3" [maxFractionDigits]="3" [showOperator]="false" />
                 </th>
                 <th pSortableColumn="audio_features.energy">
                     Energy
@@ -124,7 +127,7 @@
                 <td>
                     <p-tableCheckbox [value]="track" />
                 </td>
-                <td><img [src]="track.album.images[0].url" style="width:60px;height: 60px;border-radius: 50%;">
+                <td><img [src]="track.album?.images[0].url" style="width:60px;height: 60px;border-radius: 50%;">
                 </td>
                 <td>
                     <p-button class="anchor_btn" [label]="track?.name" [link]="true"
