--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -139,9 +139,9 @@
                 <td>{{track.artists[0].name}}</td>
                 <td>{{ formatTrackDuration(track?.duration_ms) }}</td>
                 <td>{{ track.audio_features?.tempo | round}}</td>
-                <td>{{ track.audio_features?.danceability | number:'1.3-3' }}</td>
-                <td>{{ track.audio_features?.energy | number:'1.3-3'}}</td>
-                <td>{{ track.audio_features?.loudness | number:'1.3-3'}}</td>
+                <td>{{ track.audio_features?.danceability  }}</td>
+                <td>{{ track.audio_features?.energy }}</td>
+                <td>{{ track.audio_features?.loudness }}</td>
             </tr>
         </ng-template>
         <ng-template pTemplate="emptymessage">
