--- a/src/app/spotify/playlist-details/playlist-details.component.html
+++ b/src/app/spotify/playlist-details/playlist-details.component.html
@@ -4,10 +4,19 @@
 <p-confirmDialog />
 <!-- Playlist Tracks List -->
 <div class="palylist_table">
-    <p-table [value]="playlistTracks" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
+    <!-- <p-table [value]="playlistTracks" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
         [totalRecords]="playlistTracks.length" [paginator]="true" sortField="added_at" (sortOrder)="1"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [tableStyle]="{'min-width': '60rem'}" (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
+        [tableStyle]="{'min-width': '60rem'}" (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)"> -->
+        
+        <p-table [value]="playlistTracks" [lazy]="true" (onLazyLoad)="onPageChange($event)" [rows]="pageSize"
+        [showCurrentPageReport]="true" [rowsPerPageOptions]="[10, 25, 50]" [totalRecords]="totalItemsCount"
+        [paginator]="true" sortField="added_at" (sortOrder)="1"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" paginatorPosition="top"
+         [tableStyle]="{'min-width': '60rem'}" (onRowReorder)="tableReordered($event)"
+        (onSort)="tableSorted($event)">
+        
+        
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <h3>Tracks</h3>
