--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -8,7 +8,7 @@
         (onPage)="onPageChange($event)" [totalRecords]="hisotryTracks.length" [paginator]="true" paginatorPosition="top"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" sortField="added_at"
         (sortOrder)="1" [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
-         (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
+        (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)">
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <div></div>
@@ -16,11 +16,11 @@
                 <div class="flex flex-row align-items-center">
                     <div class="flex flex-row align-items-center">
                         <div>
-                            <p-button [rounded]="true" severity="success" icon="pi pi-refresh" 
-                            [disabled]="!showSummaryGraph && !showDetailedGraph" (onClick)="refreshGraphs()"
-                            pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2" ></p-button>
+                            <p-button [rounded]="true" severity="success" icon="pi pi-refresh"
+                                [disabled]="!showSummaryGraph && !showDetailedGraph" (onClick)="refreshGraphs()"
+                                pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2"></p-button>
                         </div>
-                        <p-buttonGroup class="pr-3 btn-grp-custom">
+                        <!-- <p-buttonGroup class="pr-3 btn-grp-custom">
                             <p-button [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged(false)"
                                 pTooltip="Summary Graph" tooltipPosition="bottom">
                                 <span class="material-symbols-outlined">
@@ -33,7 +33,14 @@
                                     monitoring
                                 </span>
                             </p-button>
-                        </p-buttonGroup>
+                        </p-buttonGroup> -->
+
+                        <p-button class="pr-3 btn-grp-custom" [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged(false)"
+                            pTooltip="Summary Graph" tooltipPosition="bottom">
+                            <span class="material-symbols-outlined">
+                                show_chart
+                            </span>
+                        </p-button>
                     </div>
 
                     <p-button class="mr-2" severity="warning" (onClick)="addTracksToExistingPlaylist()"
@@ -62,7 +69,7 @@
                 <th style="width:80px">
                 </th>
                 <th style="width: 4rem">
-                    <p-tableHeaderCheckbox  />
+                    <p-tableHeaderCheckbox />
                 </th>
                 <th style="width:80px">
                 </th>
