--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -22,7 +22,7 @@
                             pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2"></p-button>
                     </div>
                     <div class="flex flex-row align-items-center">
-                        <p-buttonGroup class="pr-3 btn-grp-custom">
+                        <!-- <p-buttonGroup class="pr-3 btn-grp-custom">
                             <p-button [outlined]="!showSummaryGraph" size="small"
                                 (onClick)="showSummaryGraphChanged(false)" pTooltip="Summary Graph"
                                 tooltipPosition="bottom">
@@ -36,7 +36,14 @@
                                     monitoring
                                 </span>
                             </p-button>
-                        </p-buttonGroup>
+                        </p-buttonGroup> -->
+
+                        <p-button class="pr-3 btn-grp-custom" [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged(false)"
+                            pTooltip="Summary Graph" tooltipPosition="bottom">
+                            <span class="material-symbols-outlined">
+                                show_chart
+                            </span>
+                        </p-button>
                     </div>
 
                     <p-button class="mr-2" severity="warning" (onClick)="addTracksToExistingPlaylist()"
