--- a/src/app/spotify/liked-songs/liked-songs.component.html
+++ b/src/app/spotify/liked-songs/liked-songs.component.html
@@ -28,7 +28,7 @@
                                 pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2"></p-button>
                         </div>
                         <div class="pr-3 ">
-                            <p-buttonGroup class="btn-grp-custom">
+                            <!-- <p-buttonGroup class="btn-grp-custom">
                                 <p-button [outlined]="!showSummaryGraph" (onClick)="showSummaryGraphChanged(false)"
                                     size="small" pTooltip="Summary Graph" tooltipPosition="bottom">
                                     <span class="material-symbols-outlined">
@@ -42,7 +42,13 @@
                                         monitoring
                                     </span>
                                 </p-button>
-                            </p-buttonGroup>
+                            </p-buttonGroup> -->
+                            <p-button class=" btn-grp-custom" [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged(false)"
+                            pTooltip="Summary Graph" tooltipPosition="bottom">
+                            <span class="material-symbols-outlined">
+                                show_chart
+                            </span>
+                        </p-button>
                         </div>
 
                         <p-button class="mr-2" severity="warning" (onClick)="addTracksToExistingPlaylist()"
