--- a/src/app/spotify/playlist-details/playlist-details.component.html
+++ b/src/app/spotify/playlist-details/playlist-details.component.html
@@ -16,7 +16,6 @@
          [tableStyle]="{'min-width': '60rem'}" (onRowReorder)="tableReordered($event)"
         (onSort)="tableSorted($event)">
         
-        
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <h3>Tracks</h3>
@@ -29,7 +28,7 @@
                             pTooltip="Refresh Graph" tooltipPosition="bottom" class="px-2" ></p-button>
                         </div>
                         <div class="pr-3 ">
-                            <p-buttonGroup class="btn-grp-custom">
+                            <!-- <p-buttonGroup class="btn-grp-custom">
                                 <p-button [outlined]="!showSummaryGraph" (onClick)="showSummaryGraphChanged(false)"
                                     size="small" pTooltip="Summary Graph" tooltipPosition="bottom">
                                     <span class="material-symbols-outlined">
@@ -42,7 +41,13 @@
                                         monitoring
                                     </span>
                                 </p-button>
-                            </p-buttonGroup>
+                            </p-buttonGroup> -->
+                            <p-button class=" btn-grp-custom" [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged(false)"
+                            pTooltip="Summary Graph" tooltipPosition="bottom">
+                            <span class="material-symbols-outlined">
+                                show_chart
+                            </span>
+                        </p-button>
                         </div>
                         <p-button class="mr-2" severity="warning" (click)="confirmUpdatePlaylist()" icon="pi pi-save"
                             pTooltip="Save changes" tooltipPosition="bottom" iconPos="right"></p-button>
