--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -132,7 +132,9 @@
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr class="">
-                <td colspan="12">No tracks found in audio History.</td>
+                <td colspan="12">
+                    {{dataMessage}}
+                </td>
             </tr>
         </ng-template>
     </p-table>
