--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -10,7 +10,7 @@
         [tableStyle]="{'min-width': '60rem'}" [(selection)]="selectedTracksList" #tableRef
         (onRowReorder)="tableReordered($event)" (onSort)="tableSorted($event)" [lazy]="true"
         (onLazyLoad)="loadData($event)" [multiSortMeta]="multiSortMeta">
-        
+
         <ng-template pTemplate="caption">
             <div class="flex flex-row justify-content-between">
                 <div></div>
@@ -38,8 +38,9 @@
                             </p-button>
                         </p-buttonGroup> -->
 
-                        <p-button class="pr-3 btn-grp-custom" [outlined]="!showSummaryGraph" size="small" (onClick)="showSummaryGraphChanged(false)"
-                            pTooltip="Summary Graph" tooltipPosition="bottom">
+                        <p-button class="pr-3 btn-grp-custom" [outlined]="!showSummaryGraph" size="small"
+                            (onClick)="showSummaryGraphChanged(false)" pTooltip="Summary Graph"
+                            tooltipPosition="bottom">
                             <span class="material-symbols-outlined">
                                 show_chart
                             </span>
@@ -145,14 +146,14 @@
                 <td>{{track.artists[0].name}}</td>
                 <td>{{ formatTrackDuration(track?.duration_ms) }}</td>
                 <td>{{ track.audio_features?.tempo | round}}</td>
-                <td>{{ track.audio_features?.danceability  }}</td>
+                <td>{{ track.audio_features?.danceability }}</td>
                 <td>{{ track.audio_features?.energy }}</td>
                 <td>{{ track.audio_features?.loudness }}</td>
             </tr>
         </ng-template>
         <ng-template pTemplate="emptymessage">
             <tr class="">
-                <td colspan="12">No tracks found in audio Library.</td>
+                <td colspan="12">{{dataMessage}}</td>
             </tr>
         </ng-template>
     </p-table>
@@ -219,8 +220,8 @@
 </p-dialog>
 
 
-<p-dialog header="Track Preview" [modal]="true" [draggable]="false" [(visible)]="showPreview"
-    [closable]="true" [style]="{ width: '50rem' }">
+<p-dialog header="Track Preview" [modal]="true" [draggable]="false" [(visible)]="showPreview" [closable]="true"
+    [style]="{ width: '50rem' }">
     <div class="">
         <iframe [src]="currentTrack?.uri | uri" width="600" height="250" frameborsrcder="0" allowtransparency="true"
             allow="encrypted-media"></iframe>
