added changes to several components

--- a/src/app/spotify/audio-history/audio-history.component.html
+++ b/src/app/spotify/audio-history/audio-history.component.html
@@ -59,9 +59,9 @@
             <div>
                 <p-chart type="line" [data]="data2" [options]="options" *ngIf="showSummaryGraph" />
             </div>
-            <div><p-chart type="line" [data]="data" [options]="options" *ngIf="showDetailedGraph" />
-
-            </div>
+            <!-- <div>
+                <p-chart type="line" [data]="data" [options]="options" *ngIf="showDetailedGraph" />
+            </div> -->
         </ng-template>
 
         <ng-template pTemplate="header">
