--- a/src/app/spotify/audio-library/audio-library.component.html
+++ b/src/app/spotify/audio-library/audio-library.component.html
@@ -66,9 +66,9 @@
             <div>
                 <p-chart type="line" [data]="data2" [options]="options" *ngIf="showSummaryGraph" />
             </div>
-            <div>
+            <!-- <div>
                 <p-chart type="line" [data]="data" [options]="options" *ngIf="showDetailedGraph" />
-            </div>
+            </div> -->
             <!-- <div>
                 <p-paginator (onPageChange)="onPageChange($event)" [first]="first" [rows]="pageSize" [rowsPerPageOptions]="[10, 25, 50]" [totalRecords]="120"
                     [showCurrentPageReport]="true" [showPageLinks]="true" [showJumpToPageDropdown]="false"
