--- a/src/app/spotify/liked-songs/liked-songs.component.html
+++ b/src/app/spotify/liked-songs/liked-songs.component.html
@@ -68,10 +68,15 @@
             </div>
             <div>
                 <p-chart type="line" [data]="data2" [options]="options" *ngIf="showSummaryGraph" />
+            
+                <div  *ngIf="showSummaryGraph">
+                    <app-track-summary-graph></app-track-summary-graph>
+                </div>
+                
             </div>
-            <div>
+            <!-- <div>
                 <p-chart type="line" [data]="data" [options]="options" *ngIf="showDetailedGraph" />
-            </div>
+            </div> -->
             <!-- <p-paginator (onPageChange)="onPageChange($event)" [rows]="pageSize" [rowsPerPageOptions]="[10, 25, 50]"
                 [totalRecords]="totalLikedSongsCount" [showCurrentPageReport]="true" [showPageLinks]="true"
                 [showJumpToPageDropdown]="false" class=""
