added changes for selected tracks in summary graph

--- a/src/app/spotify/shared/track-summary-graph/track-summary-graph.component.html
+++ b/src/app/spotify/shared/track-summary-graph/track-summary-graph.component.html
@@ -9,7 +9,7 @@
         <div class="info">
             <h6 class="m-0 mb-1 text-color-secondary font-normal">Total Tracks</h6>
             <p class="m-0 p-0 font-bold">
-                {{ tracksData.tracks.length }}
+                {{ totalTracks }}
             </p>
         </div>
         <div class="info">
